--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -292,6 +292,7 @@
     <Compile Include="App_Start\Jobs\DatabaseBackupJob.cs" />
     <Compile Include="App_Start\Jobs\EmailJob.cs" />
     <Compile Include="App_Start\Jobs\NightlySyncJobs.cs" />
+    <Compile Include="App_Start\Jobs\VerifyPermissionsJob.cs" />
     <Compile Include="App_Start\NHibernateProfilerBootstrapper.cs" />
     <Compile Include="App_Start\RegisterClientValidationExtensions.cs" />
     <Compile Include="App_Start\VerifyIndexesRole.cs" />
