--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -73,6 +73,8 @@
     <add key="AfsRoleUrl" value="http://kfs-test.ucdavis.edu/kfs-stg/remoting/financialSystemRoleServiceSOAP" />
     <add key="AfsToken" value="stage" />
     <add key="NewRelic.AppName" value="PrePurchasing" />
+    <add key="aspnet:MaxHttpCollectionKeys" value="3000" />
+    <add key="aspnet:MaxJsonDeserializerMembers" value="3000" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
