--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -57,7 +57,7 @@
     </errorFilter>
   </elmah>
   <connectionStrings>
-    <add name="MainDB" connectionString="data source=terry;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="MainDB" connectionString="data source=terry;Initial Catalog=PrePurchasingafs;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings file="AppSettings.config">
     <add key="webpages:Version" value="1.0.0.0" />
@@ -69,8 +69,8 @@
     <add key="uservoiceKey" value="[External]" />
     <add key="uservoiceSecret" value="[External]" />
     <add key="IpFilter" value="[External]" />
-    <add key="AfsUrl" value="https://kfs-test.ucdavis.edu/kfs-stg/remoting/purchaseDocumentsInterfaceServiceSOAP" />
-    <add key="AfsRoleUrl" value="http://kfs-test.ucdavis.edu/kfs-stg/remoting/financialSystemRoleServiceSOAP" />
+    <add key="AfsUrl" value="https://kfs-test.ucdavis.edu/kfs-tst2/remoting/purchaseDocumentsInterfaceServiceSOAP" />
+    <add key="AfsRoleUrl" value="http://kfs-test.ucdavis.edu/kfs-tst2/remoting/financialSystemRoleServiceSOAP" />
     <add key="AfsToken" value="stage" />
     <add key="NewRelic.AppName" value="PrePurchasing" />
     <add key="aspnet:MaxHttpCollectionKeys" value="3000" />
