--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -1022,6 +1022,7 @@
     <Content Include="Views\Workgroup\UpdateMultipleAccounts.cshtml" />
     <Content Include="Views\Report\TotalByWorkgroup.cshtml" />
     <Content Include="Views\Report\TotalByPrimaryOrg.cshtml" />
+    <Content Include="Views\Report\TotalByVendor.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
