--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -1025,7 +1025,7 @@
     <Content Include="Views\Report\TotalByWorkgroup.cshtml" />
     <Content Include="Views\Report\TotalByPrimaryOrg.cshtml" />
     <Content Include="Views\Report\TotalByVendor.cshtml" />
-    <Content Include="Views\Order\_FdpComplete.cshtml" />
+    <Content Include="Views\Order\_ReviewFpdComplete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
