--- a/Purchasing.Tests/packages.config
+++ b/Purchasing.Tests/packages.config
@@ -5,8 +5,10 @@
   <package id="CommonServiceLocator" version="1.0" />
   <package id="FluentNHibernate" version="1.3.0.727" />
   <package id="Iesi.Collections" version="3.2.0.4000" />
+  <package id="MvcContrib.Mvc3.TestHelper-ci" version="3.0.100.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.5" />
   <package id="NHibernate" version="3.3.0.4000" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
   <package id="SQLitex64" version="1.0.66" />
   <package id="UcdArch" version="3.3.0.76" />
   <package id="UcdArch.NHibernate" version="3.3.0.76" />
