--- a/Purchasing.Web/packages.config
+++ b/Purchasing.Web/packages.config
@@ -32,8 +32,8 @@
   <package id="MiniProfiler" version="2.0.2" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" />
   <package id="Mvc3Futures" version="3.0.20105.0" />
-  <package id="MvcContrib.Mvc3.FluentHtml-ci" version="3.0.100.0" />
-  <package id="MvcContrib.Mvc3-ci" version="3.0.100.0" />
+  <package id="MvcContrib.Mvc3.FluentHtml-ci" version="3.0.100.0" targetFramework="net40" />
+  <package id="MvcContrib.Mvc3-ci" version="3.0.100.0" targetFramework="net40" />
   <package id="NewRelicWindowsAzure" version="1.0.0.29" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.5" />
   <package id="NHibernate" version="3.3.0.4000" />
