--- a/Purchasing.Jobs.UpdateOrderIndexes/packages.config
+++ b/Purchasing.Jobs.UpdateOrderIndexes/packages.config
@@ -6,4 +6,5 @@
   <package id="NEST" version="1.4.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
+  <package id="UcdArch" version="5.1.0.145" targetFramework="net451" />
 </packages>
