--- a/Purchasing.Jobs.UpdateOrderIndexes/packages.config
+++ b/Purchasing.Jobs.UpdateOrderIndexes/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="Dapper" version="1.38" targetFramework="net451" />
   <package id="Elasticsearch.Net" version="1.4.0" targetFramework="net451" />
