--- a/Purchasing.Mvc/Web.config
+++ b/Purchasing.Mvc/Web.config
@@ -196,28 +196,8 @@
         more information on remote access and securing ELMAH.
     -->
     <security allowRemoteAccess="false" />
+    <errorLog type="Elmah.Io.ErrorLog, Elmah.Io" LogId="8223b9a6-4f5a-4216-bc3a-8c58f9945c9b" />
   </elmah>
-  <location path="elmah.axd" inheritInChildApplications="false">
-    <system.web>
-      <httpHandlers>
-        <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
-      </httpHandlers>
-      <!-- 
-        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
-        more information on using ASP.NET authorization securing ELMAH.
-
-      <authorization>
-        <allow roles="admin" />
-        <deny users="*" />  
-      </authorization>
-      -->
-    </system.web>
-    <system.webServer>
-      <handlers>
-        <add name="ELMAH" verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
-      </handlers>
-    </system.webServer>
-  </location>
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
       <property name="dialect">NHibernate.Dialect.MsSql2008Dialect</property>
